--- a/index.html
+++ b/index.html
@@ -1,38 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Dinner planner</title>
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-	<div class="container">
-		<h1>Dinner planner</h1>
-		<div id="exampleView">
-			<div>
-				Number of guests: <span id="numberOfGuests"></span>
-			</div>
-			<div>
-          <button id="minusGuest" class="btn"><span class="glyphicon glyphicon-minus"></span></button>
-				<button id="plusGuest" class="btn"><span class="glyphicon glyphicon-plus"></span></button>
-			</div>
-		</div>
-	</div>
-
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <!-- Bootstrap JavaScript, needed if you want for instance tabs, models, popovers etc. -->
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-
-	<!-- The application JavaScript code -->
-	<script src="js/app.js"></script>
-	<script src="js/model/dinnerModel.js"></script>
-	<script src="js/view/exampleView.js"></script>
-	<!-- TODO: Here you should include JS code for your other views -->
+    <div class="flex-container">
+      <div class="banner">
+	<h1>Dinner Planner</h1>
+      </div>
+      <div class="inner-container">
+	<p class="info-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed dictum turpis. Praesent non justo vitae mauris posuere blandit vel id arcu. Aliquam semper quis augue vitae pharetra. Mauris imperdiet ex mattis justo eleifend pharetra.
+	</p>
+	<a href="main_page.html" class="button button2">Create new dinner</a>
+      </div>
+    </div>
   </body>
 </html>
