Added new version of lab1.

--- a/checkout_page.html
+++ b/checkout_page.html
@@ -4,7 +4,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <script src="js/model/dinnerModel.js"></script>
+    <script src="js/view/resultView.js"></script>
+    <script src="js/view/recipeView.js"></script>
     <script src="js/view/checkoutView.js"></script>
+    <script src="js/view/dishView.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
@@ -20,9 +23,6 @@
         </div>
         <div id="checkout-menu">
           <div id="checkout-items">
-              <script>
-              CheckoutView($("#checkout-items"), new DinnerModel());
-              </script>
           </div>
 
         </div>
@@ -34,6 +34,7 @@
 
     </div>
 
+    <script src="js/app.js"></script>
 
   </body>
 </html>
