--- a/main_page.html
+++ b/main_page.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- Javascript files goes here -->
-    <!--<script src="js/app.js"></script>-->
-    <script src="js/model/dinnerModel.js"></script>
-    <script src="js/view/exampleView.js"></script>
-    <script src="js/script/hideDropdown.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    
-
+    <script src="js/model/dinnerModel.js"></script>
+    <script src="js/view/resultView.js"></script>
+    <script src="js/view/recipeView.js"></script>
+    <script src="js/view/checkoutView.js"></script>
+    <script src="js/view/dishView.js"></script>
+    <script src="js/view/sideView.js"></script>
+    <script src="js/view/searchView.js"></script>
   </head>
   <body>
     <div class="flex-container">
@@ -20,10 +21,10 @@
       <div class="body-container">
 
 	<!-- Sidebar -->
-        <div class="side-bar border-object">
+        <div id="side-bar" class="side-bar border-object">
 	  <div id="dinner-collapse" class="no-wrap">
 	 <h2 class="text-margin-1">My dinner</h2>
-	 <button id="collapse-button" class="button button2 small-button" onclick="hideDropdown()">Show</button>
+	 <button id="collapse-button" class="button button2 small-button">Show</button>
 	 </div>
 	 <div id="people-input" class="no-wrap">
 	   <p id="people-text" class="text-margin-1">People:</p>
@@ -45,7 +46,7 @@
 	<div class="main-view">
 
 	<!-- Searchbar -->
-	  <div class="search-bar border-object">
+	  <div id="search-bar" class="border-object">
 	    <h2 class="small-text">Find a dish</h2>
 	    <div class="no-wrap">
 	    <input type="text" id="search-field" placeholder="Enter key words">
@@ -62,14 +63,12 @@
 
 	<!-- Results-view -->
 	  <div id="result-container" class="result-view border-object">
-      <script>
-          ExampleView($("#result-container"),new DinnerModel());
-      </script>
     </div>
 	</div>
       </div>
     </div>
 
 
+    <script src="js/app.js"></script>
   </body>
 </html>
