--- a/recipe_page.html
+++ b/recipe_page.html
@@ -4,8 +4,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <!--<script src="js/app.js"></script>-->
     <script src="js/model/dinnerModel.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/view/resultView.js"></script>
     <script src="js/view/recipeView.js"></script>
+    <script src="js/view/checkoutView.js"></script>
+    <script src="js/view/dishView.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
     <div class="flex-container">
@@ -19,13 +22,11 @@
             <a href="main_page.html" class="button button2 small-button">Go back and edit dinner</a>
         </div>
         <div id="recipe-list">
-          <script>
-            RecipeView($("#recipe-list"),new DinnerModel());
-          </script>
         </div>
       </div>
 
     </div>
+    <script src="js/app.js"></script>
 
   </body>
 </html>
