--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
   </head>
   <body>
     <div class="flex-container">
-      <div class="banner">
-	<h1>Dinner Planner</h1>
-      </div>
-      <div class="inner-container">
-	<p class="info-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed dictum turpis. Praesent non justo vitae mauris posuere blandit vel id arcu. Aliquam semper quis augue vitae pharetra. Mauris imperdiet ex mattis justo eleifend pharetra.
-	</p>
-	<a href="main_page.html" class="button button2">Create new dinner</a>
-      </div>
+      <div class="banner"> <h1>Dinner Planner</h1> </div>
+      <div id="welcome-text" class="inner-container"></div>
     </div>
   </body>
+
+    <!-- Javascript files goes here -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
+    <script src="js/model/dinnerModel.js"> </script>
+    <script src="js/view/resultView.js"> </script>
+    <script src="js/view/recipeView.js"> </script>
+    <script src="js/view/checkoutView.js"> </script>
+    <script src="js/view/dishView.js"> </script>
+    <script src="js/view/sideView.js"> </script>
+    <script src="js/view/searchView.js"> </script>
+    <script src="js/view/indexView.js"> </script>
+    <script src="js/app.js">
 </html>
