--- a/index.html
+++ b/index.html
@@ -2,16 +2,27 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="UTF-8">
   </head>
   <body>
     <div class="flex-container">
-      <div class="banner"> <h1>Dinner Planner</h1> </div>
+      <div class="banner"> <h1>Dinner Planner</h1></div>
+      <div class="body-container">
       <div id="welcome-text" class="inner-container"></div>
+      <div id="side-bar" class="border-object"></div>
+      <div class="main-view">
+	<div id="search-bar" class="border-object"></div>
+	<div id="result-container" class="border-object result-view"></div>
+	<div id="dish-view"></div>
+      </div>
+      
+      </div>
     </div>
   </body>
 
     <!-- Javascript files goes here -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"> </script>
+    <!-- Views -->
     <script src="js/model/dinnerModel.js"> </script>
     <script src="js/view/resultView.js"> </script>
     <script src="js/view/recipeView.js"> </script>
@@ -20,5 +31,16 @@
     <script src="js/view/sideView.js"> </script>
     <script src="js/view/searchView.js"> </script>
     <script src="js/view/indexView.js"> </script>
-    <script src="js/app.js">
+    <!-- Controllers -->
+    <script src="js/controllers/resultViewController.js"> </script>
+    <script src="js/controllers/checkoutViewController.js"> </script>
+    <script src="js/controllers/dishViewController.js"> </script>
+    <script src="js/controllers/sideViewController.js"> </script>
+    <!--
+    <script src="js/controllers/recipeViewController.js"> </script>
+    <script src="js/controllers/searchViewController.js"> </script>
+    <script src="js/controllers/indexViewController.js"> </script>
+    -->
+    <!-- General state controller -->
+    <script src="js/app.js"></script>
 </html>
