--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <div class="flex-container">
       <div class="banner"> <h1>Dinner Planner</h1></div>
       <div class="body-container">
-      <div id="welcome-text" class="inner-container"></div>
-      <div id="side-bar" class="border-object"></div>
+      <div id="welcome-view" class="inner-container"></div>
+      <div id="side-view" class="border-object"></div>
       <div class="main-view">
-	<div id="search-bar" class="border-object"></div>
-	<div id="result-container" class="border-object result-view"></div>
+	<div id="search-view" class="border-object"></div>
+	<div id="result-view" class="border-object result-view"></div>
 	<div id="dish-view"></div>
+	<div id="sub-banner-view"></div>
+	<div id="checkout-view"></div>
+	<div id="recipe-view"></div>
       </div>
       
       </div>
