--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div id="checkout-view"></div>
 	<div id="recipe-view"></div>
       </div>
-      
+
       </div>
     </div>
   </body>
@@ -41,9 +41,9 @@
     <script src="js/controllers/sideViewController.js"> </script>
     <!--
     <script src="js/controllers/recipeViewController.js"> </script>
-    <script src="js/controllers/searchViewController.js"> </script>
+    <script src="js/controllers/searchViewController.js"> </script>-->
     <script src="js/controllers/indexViewController.js"> </script>
-    -->
+
     <!-- General state controller -->
     <script src="js/app.js"></script>
 </html>
