--- a/index.html
+++ b/index.html
@@ -34,15 +34,16 @@
     <script src="js/view/sideView.js"> </script>
     <script src="js/view/searchView.js"> </script>
     <script src="js/view/indexView.js"> </script>
+    <script src="js/view/subBannerView.js"> </script>
     <!-- Controllers -->
     <script src="js/controllers/resultViewController.js"> </script>
     <script src="js/controllers/checkoutViewController.js"> </script>
     <script src="js/controllers/dishViewController.js"> </script>
     <script src="js/controllers/sideViewController.js"> </script>
-    <!--
-    <script src="js/controllers/recipeViewController.js"> </script>-->
+    <script src="js/controllers/recipeViewController.js"> </script>
     <script src="js/controllers/searchViewController.js"> </script>
     <script src="js/controllers/indexViewController.js"> </script>
+    <script src="js/controllers/subBannerViewController.js"> </script>
 
     <!-- General state controller -->
     <script src="js/app.js"></script>
