Fixed index view.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <div class="flex-container">
       <div class="banner"> <h1>Dinner Planner</h1></div>
       <div class="body-container">
-      <div id="welcome-view" class="inner-container"></div>
+	<div id="welcome-view" class="inner-container">
+	  <p class="info-text">
+	    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sed dictum turpis. Praesent non justo vitae mauris posuere blandit vel id arcu. Aliquam semper quis augue vitae pharetra. Mauris imperdiet ex mattis justo eleifend pharetra.
+	  </p>
+	  <button id="start-create-dinner-button" class="button button2">Create new dinner</button>
+	</div>
       <div id="side-view" class="border-object"></div>
       <div class="main-view">
 	<div id="search-view" class="border-object"></div>
