Fixed search view.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,21 @@
 
 	</div>
       <div class="main-view">
-	<div id="search-view" class="border-object"></div>
+	<div id="search-view" class="border-object">
+
+<h2 class="small-text">Find a dish </h2>
+<div class="no-wrap">
+<input type="text" id="search-field" placeholder="Enter key words">
+<select id="search-drop">
+<option value="all">All</option>
+<option value="main dish">Main Course </option>
+<option value="dessert">Dessert </option>
+<option value="starter">Appetizer </option>
+</select>
+<button id="search-button"class="button button2 small-button">Search </button>
+</div>
+
+	</div>
 	<div id="result-view" class="border-object result-view"></div>
 	<div id="dish-view"></div>
 	<div id="sub-banner-view"></div>
