css is broken because of refactoring

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	</div>
 	<div class="main-view">
 	  <div id="search-view" class="border-object">
-	  
+
 	  <h2 class="small-text">Find a dish
 	  </h2>
 	  <div class="no-wrap">
@@ -75,7 +75,7 @@
 	<div id="result-view" class="border-object result-view">
 	</div>
 	<div id="dish-view">
-	  
+
 	  <div id="dish-details" class="result-view border-object">
 	    <div id="dish-more">
 	      <div id="dish-description">
@@ -106,32 +106,39 @@
 		    <div id="ingredients-total">
 		      <button id="add-to-menu"class="button button2 small-button">Add to menu
 		      </button>
-		      <p id="tot-price\">
+		      <p id="tot-price">
 		      </p>
 		    </div>
 	      </div>
 	    </div>
-	    <div id=\"dish-preperation">
+	    <div id="dish-preperation">
 	      <h2>PREPERATION
 	      </h2>
 	      <p id="dish-prep">
 	      </p>
 	    </div>
 	  </div>
+      </div>
 	  <div id="sub-banner-view">
 	  </div>
 	  <div id="checkout-view">
-	    
-	    
+          <div id="checkout-menu">
+          <div id="checkout-items">
+          </div>
+          </div>
+          <hr id="checkout-line">
+          <div>
+          <button id="print-full-recipe" class="button button2">Print Full Recipe</button>
+          </div>
 	  </div>
 	  <div id="recipe-view">
 	  </div>
 	</div>
-	
+
       </div>
       </div>
   </body>
-  
+
     <!-- Javascript files goes here -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
     </script>
