Added config file.

--- a/index.html
+++ b/index.html
@@ -155,6 +155,8 @@
   </body>
 
     <!-- Javascript files goes here -->
+    <!-- Config -->
+    <script src="config.js"</script>
     <!-- Views -->
     <script src="js/model/dinnerModel.js">
     </script>
