--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
     <!-- Javascript files goes here -->
     <!-- Config -->
     <script src="config.js"</script>
-    <!-- Views -->
+    <!-- Model -->
     <script src="js/model/dinnerModel.js">
     </script>
+    <!-- Views -->
     <script src="js/view/resultView.js">
     </script>
     <script src="js/view/recipeView.js">
