--- a/index.html
+++ b/index.html
@@ -80,8 +80,12 @@
 	    $("#search-view").hide();
 	  </script>
 
+	<div id="outer-result-view">  
+	<div id="loader"></div>
+	<script>$("#loader").hide();</script>
 	<div id="result-view" class="border-object result-view">
 	</div>
+	  </div>
 	<div id="dish-view">
 
 	  <div id="dish-details" class="result-view border-object">
@@ -156,7 +160,7 @@
 
     <!-- Javascript files goes here -->
     <!-- Config -->
-    <script src="config.js"</script>
+    <script src="config.js"></script>
     <!-- Model -->
     <script src="js/model/dinnerModel.js">
     </script>
