--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
 	    $("#search-view").hide();
 	  </script>
 
-	<div id="outer-result-view">  
+	<!--<div id="outer-result-view">
 	<div id="loader"></div>
-	<script>$("#loader").hide();</script>
+	<script>$("#loader").hide();</script>-->
 	<div id="result-view" class="border-object result-view">
 	</div>
-	  </div>
+	 <!-- </div>-->
 	<div id="dish-view">
 
 	  <div id="dish-details" class="result-view border-object">
