--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 
 	  <h2 class="small-text">Find a dish
 	  </h2>
+      <div id="loader"></div>
+      <script>$("#loader").hide();</script>
 	  <div class="no-wrap">
 	    <input type="text" id="search-field" placeholder="Enter key words">
     <select id="search-drop">
@@ -73,6 +75,7 @@
   </select>
   <button id="search-button"class="button button2 small-button">Search
 </button>
+
 	  </div>
 
 	</div>
@@ -80,12 +83,8 @@
 	    $("#search-view").hide();
 	  </script>
 
-	<!--<div id="outer-result-view">
-	<div id="loader"></div>
-	<script>$("#loader").hide();</script>-->
 	<div id="result-view" class="border-object result-view">
 	</div>
-	 <!-- </div>-->
 	<div id="dish-view">
 
 	  <div id="dish-details" class="result-view border-object">
