--- a/index.html
+++ b/index.html
@@ -62,14 +62,22 @@
 	  <div class="no-wrap">
 	    <input type="text" id="search-field" placeholder="Enter key words">
     <select id="search-drop">
-    <option value="all">All
-  </option>
-  <option value="main dish">Main Course
-  </option>
-  <option value="dessert">Dessert
-  </option>
-  <option value="starter">Appetizer
-  </option>
+    <option value="all">All </option>
+    <option value="main course">Main Course</option>
+    <option value="side dish">Side Dish</option>
+    <option value="dessert">Dessert</option>
+    <option value="appetizer">Appetizer</option>
+    <option value="salad">Salad</option>
+    <option value="bread">Bread</option>
+    <option value="breakfast">Breakfast</option>
+    <option value="soup">Soup</option>
+    <option value="beverage">Beverage</option>
+    <option value="sauce">Sauce</option>
+    <option value="drink">Drink</option>
+
+
+
+  
   </select>
   <button id="search-button"class="button button2 small-button">Search
 </button>
