--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
 
-  
+
   </select>
   <button id="search-button"class="button button2 small-button">Search
 </button>
@@ -94,7 +94,7 @@
 	<div id="result-view" class="border-object result-view">
 	</div>
 	<div id="dish-view">
-
+    <div id="loader2"></div>
 	  <div id="dish-details" class="result-view border-object">
 	    <div id="dish-more">
 	      <div id="dish-description">
