OMG! More dishes works and it's amazing.:tada:

--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@
 	    $("#search-view").hide();
 	  </script>
 
+	 
 	<div id="result-view" class="border-object result-view">
+	  <div id="inner-result-view" class="border-object result-view">
+	</div>
+	<button id="more-button"class="button button2 small-button">More</button>
 	</div>
 	<div id="dish-view">
     <div id="loader2"></div>
